--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sendmail": "^0.2.1",
     "serve-favicon": "^2.1.1",
     "strip": "0.0.7",
-    "underscore": "^1.6.0"
+    "underscore": "^1.6.0",
+    "xss": "^0.3.3"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
